# laser-jitter

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  usage.ipynb  usage_best.ipynb
laser_jitter/: data.py  inference.py  model.py  model_basic.py  train.py  utils.py
notebooks/: production.ipynb  usage.ipynb
src/laser_jitter/: data.py  model.py  production.py  train.py
src/laser_jitter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_data.py  test_inference.py  test_model.py  test_model_basic.py  test_utils.py
