[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "laser_jitter"
version = "0.1.0"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "torch",
    "torchvision",
    "tqdm",
    "pyyaml",
]
requires-python = ">=3.12"
authors = [
  {name = "Maksim Valialshchikov", email = "maksim.valialshchikov@uni-jena.de"},
]
maintainers = [
]
description = "Predicts laser jitter with RNNs"
readme = "README.md"
license = {file = "LICENSE"}
keywords = [""]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]

[project.urls]
Repository = "https://github.com/maxbalrog/laser-jitter"